--- a/css/theme/besson.css
+++ b/css/theme/besson.css
@@ -207,8 +207,7 @@ body {
 .reveal section img {
   margin: 15px 0px;
   background: rgba(255, 255, 255, 0.12);
-  border: 4px solid #222;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
+}
 
 .reveal a img {
   -webkit-transition: all 0.15s linear;
@@ -264,3 +263,7 @@ body {
  *********************************************/
 .reveal .slide-number {
   color: #2a76dd; }
+
+.reveal .highlight {
+  font-size: 70px;
+}
