--- a/css/reveal.css
+++ b/css/reveal.css
@@ -888,6 +888,7 @@ body {
     -moz-box-sizing: border-box;
          box-sizing: border-box; }
   .reveal.overview .slides section:hover, .reveal.overview .slides section.present {
+    margin: 0;
     outline: 10px solid rgba(150, 150, 150, 0.4);
     outline-offset: 10px; }
   .reveal.overview .slides section .fragment {
