--- a/css/theme/besson.css
+++ b/css/theme/besson.css
@@ -177,6 +177,7 @@ body {
   display: inline-block;
   font-size: 0.6em;
   line-height: 1.2em;
+  margin-top: 40px;
   vertical-align: top; }
 
 .reveal small * {
